<project>
  <groupId>corenlp-wrapper</groupId>
  <artifactId>corenlp-wrapper</artifactId>
  <modelVersion>4.0.0</modelVersion>
  <name>corenlp-wrapper</name>
  <packaging>jar</packaging>
  <version>0.1</version>
  <repositories>
    <repository>
      <id>central</id>
      <!-- This should be at top, it makes maven try the central repo first and then others and hence faster dep resolution -->
      <name>Maven Repository</name>
      <url>https://repo1.maven.org/maven2</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>apache-repo</id>
      <name>Apache Repository</name>
      <url>https://repository.apache.org/content/repositories/releases</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>jboss-repo</id>
      <name>JBoss Repository</name>
      <url>https://repository.jboss.org/nexus/content/repositories/releases</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>cloudera-repo</id>
      <name>Cloudera Repository</name>
      <url>https://repository.cloudera.com/artifactory/cloudera-repos</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>Spray.cc repository</id>
      <url>http://repo.spray.cc</url>
    </repository>
    <repository>
      <id>Akka repository</id>
      <url>http://repo.akka.io/releases</url>
    </repository>
    <repository>
        <id>scala</id>
        <name>Scala Tools</name>
        <url>http://scala-tools.org/repo-releases/</url>
        <releases>
            <enabled>true</enabled>
        </releases>
        <snapshots>
            <enabled>false</enabled>
        </snapshots>
    </repository>
  </repositories>
  <dependencies>

	  <dependency>
		  <groupId>edu.stanford.nlp</groupId>
		  <artifactId>stanford-corenlp</artifactId>
		  <version>3.8.0</version>
	  </dependency>
	  <dependency>
		  <groupId>edu.stanford.nlp</groupId>
		  <artifactId>stanford-corenlp</artifactId>
		  <version>3.8.0</version>
		  <classifier>models</classifier>
	  </dependency>

  </dependencies>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <java.version>1.8</java.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <build>

    <plugins>
      <!-- <plugin> -->

      <!--   <groupId>org.apache.maven.plugins</groupId> -->
      <!--   <artifactId>maven-enforcer-plugin</artifactId> -->
      <!--   <version>1.1.1</version> -->
      <!--   <executions> -->
      <!--     <execution> -->
      <!--       <id>enforce-versions</id> -->
      <!--       <goals> -->
      <!--         <goal>enforce</goal> -->
      <!--       </goals> -->
      <!--       <configuration> -->
      <!--         <rules> -->
      <!--           <requireMavenVersion> -->
      <!--             <version>3.0.0</version> -->
      <!--           </requireMavenVersion> -->
      <!--           <requireJavaVersion> -->
      <!--             <version>${java.version}</version> -->
      <!--           </requireJavaVersion> -->
      <!--         </rules> -->
      <!--       </configuration> -->
      <!--     </execution> -->
      <!--   </executions> -->
      <!-- </plugin> -->
      <!-- <plugin> -->
      <!--   <groupId>org.codehaus.mojo</groupId> -->
      <!--   <artifactId>build-helper-maven-plugin</artifactId> -->
      <!--   <version>1.7</version> -->
      <!-- </plugin> -->

      <!-- <plugin> -->
      <!--   <groupId>net.alchim31.maven</groupId> -->
      <!--   <artifactId>scala-maven-plugin</artifactId> -->
      <!--   <version>3.1.5</version> -->
      <!--   <executions> -->
      <!--     <execution> -->
      <!--       <id>scala-compile-first</id> -->
      <!--       <phase>process-resources</phase> -->
      <!--       <goals> -->
      <!--         <goal>compile</goal> -->
      <!--       </goals> -->
      <!--     </execution> -->
      <!--     <execution> -->
      <!--       <id>scala-test-compile-first</id> -->
      <!--       <phase>process-test-resources</phase> -->
      <!--       <goals> -->
      <!--         <goal>testCompile</goal> -->
      <!--       </goals> -->
      <!--     </execution> -->
      <!--     <execution> -->
      <!--       <id>attach-scaladocs</id> -->
      <!--       <phase>verify</phase> -->
      <!--       <goals> -->
      <!--         <goal>doc-jar</goal> -->
      <!--       </goals> -->
      <!--     </execution> -->
      <!--   </executions> -->
      <!--   <configuration> -->
      <!--     <scalaVersion>${scala.version}</scalaVersion> -->
      <!--     <recompileMode>incremental</recompileMode> -->
      <!--     <useZincServer>true</useZincServer> -->
      <!--     <args> -->
      <!--       <arg>-unchecked</arg> -->
      <!--       <arg>-deprecation</arg> -->
      <!--     </args> -->
      <!--     <jvmArgs> -->
      <!--       <jvmArg>-Xms64m</jvmArg> -->
      <!--       <jvmArg>-Xms1024m</jvmArg> -->
      <!--       <jvmArg>-Xmx1024m</jvmArg> -->
      <!--       <jvmArg>-XX:PermSize=${PermGen}</jvmArg> -->
      <!--       <jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg> -->
      <!--     </jvmArgs> -->
      <!--     <javacArgs> -->
      <!--       <javacArg>-source</javacArg> -->
      <!--       <javacArg>${java.version}</javacArg> -->
      <!--       <javacArg>-target</javacArg> -->
      <!--       <javacArg>${java.version}</javacArg> -->
      <!--     </javacArgs> -->
      <!--   </configuration> -->
      <!-- </plugin> -->


      <!-- <plugin> -->
      <!--   <groupId>org.apache.maven.plugins</groupId> -->
      <!--   <artifactId>maven-compiler-plugin</artifactId> -->
      <!--   <version>2.5.1</version> -->
      <!--   <configuration> -->
      <!--     <source>${java.version}</source> -->
      <!--     <target>${java.version}</target> -->
      <!--     <encoding>UTF-8</encoding> -->
      <!--     <maxmem>1024m</maxmem> -->
      <!--   </configuration> -->
      <!-- </plugin> -->

      <!-- <plugin> -->
      <!--   <groupId>org.apache.maven.plugins</groupId> -->
      <!--   <artifactId>maven-jar-plugin</artifactId> -->
      <!--   <version>2.4</version> -->
      <!-- </plugin> -->

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>2.0</version>
        <configuration>
          <shadedArtifactAttached>true</shadedArtifactAttached>
          <shadedClassifierName>assembly</shadedClassifierName>
          <artifactSet>
            <includes>
              <include>*:*</include>
            </includes>
          </artifactSet>
          <filters>
            <filter>
              <artifact>*:*</artifact>
              <excludes>
                <exclude>META-INF/*.SF</exclude>
                <exclude>META-INF/*.DSA</exclude>
                <exclude>META-INF/*.RSA</exclude>
              </excludes>
            </filter>
          </filters>
          <transformers>
            <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
            <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
              <resource>META-INF/services/org.apache.hadoop.fs.FileSystem</resource>
            </transformer>
            <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
              <resource>reference.conf</resource>
            </transformer>
          </transformers>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>

</build>

</project>
